--- a/elibrary-controller/src/main/resources/templates/books/booksList.html
+++ b/elibrary-controller/src/main/resources/templates/books/booksList.html
@@ -35,6 +35,11 @@
             <h1>Books</h1>
         </div>
         <div class="bd-content ps-lg-4">
+            <div th:if="${currentCategoryDto != null}">
+                <small class="text-sm-start text-muted m-0" th:text="${currentCategoryDto.getCategoryPath()+ '/'}"></small>
+                <small><a class="text-sm-start m-0 link-primary" th:href="@{books(categoryId=${currentCategoryDto.getId()})}"
+                          th:text="${currentCategoryDto.getCategoryName}"></a></small>
+            </div>
             <table class="table">
                 <thead class="thead-dark">
                 <tr>
