--- a/elibrary-controller/src/main/resources/templates/fragments/getAddBookFormModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/getAddBookFormModal.html
@@ -29,6 +29,10 @@
                             <input type="number" name="countAuthors" class="form-control"
                                    placeholder="Count of authors" aria-label="Count of authors"
                                    value="5" id="countAuthors">
+                            <label class="input-group-text" for="countAttributes">Count of attributes</label>
+                            <input type="number" name="countAttributes" class="form-control"
+                                   placeholder="Count of attributes" aria-label="Count of attributes"
+                                   value="5" id="countAttributes">
                         </div>
                     </form>
                     <form class="input-group mt-4 m-0 row justify-content-md-center" id="isbnFormId" action="#"
