--- a/elibrary-controller/src/main/resources/templates/fragments/subNavbarSubscriptionAdmin.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/subNavbarSubscriptionAdmin.html
@@ -4,20 +4,26 @@
 
 <body>
 
-<aside th:fragment="navAsideSubcriptionStatusAndInput(currentStatusCode)" class="bd-sidebar">
+<aside th:fragment="navAsideSubcriptionStatusAndInput(currentStatusCode, userId)" class="bd-sidebar">
     <nav id="bd-docs-nav" aria-label="Docs navigation">
         <div th:replace="::statusList(statusCode=${currentStatusCode})"></div>
-        <form class="input-group mt-5" action="#" th:action="@{subscriptions}" th:method="get">
-            <input type="text" name="userId" class="form-control"
-                   placeholder="User ID" aria-label="User library card number"
-                   aria-describedby="button-addon1">
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon1">Find</button>
+        <form class="mt-5" action="#" th:action="@{subscriptions}" th:method="get">
+            <label for="userId" class="form-label">User ID</label>
+            <div class="input-group mb-3">
+                <input type="number" name="userId" class="form-control" id="userId"
+                       placeholder="User ID" aria-label="User library card number" th:value="${userId}"
+                       aria-describedby="button-addon1">
+                <button class="btn btn-outline-secondary" type="submit" id="button-addon1">Find</button>
+            </div>
         </form>
-        <form class="input-group mt-3" action="#" th:action="@{subscriptions}" th:method="get">
-            <input type="text" name="subscriptionId" class="form-control"
-                   placeholder="Subscription ID" aria-label="User library card number"
-                   aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Find</button>
+        <form class="mt-3" action="#" th:action="@{subscriptions}" th:method="get">
+            <label for="subscriptionId" class="form-label">Subscription ID</label>
+            <div class="input-group mb-3">
+                <input type="number" name="subscriptionId" class="form-control" id="subscriptionId"
+                       placeholder="Subscription ID" aria-label="User library card number"
+                       aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Find</button>
+            </div>
         </form>
     </nav>
 </aside>
